# internal/adapters/handlers/router.go
@@ -11,6 +11,8 @@ func NewRouter(logger *slog.Logger, productHandlers *ProductHttpHandlers, websit
 	handler.HandleFunc("POST /api/v1/products", productHandlers.CreateProduct)
 
 	handler.HandleFunc("POST /api/v1/websites", websiteHandlers.CreateWebsite)
+	handler.HandleFunc("POST /api/v1/websites/{id}/definitions/catalog", websiteHandlers.CreateCatalogScraperDefinition)
+	handler.HandleFunc("POST /api/v1/websites/{id}/definitions/product", websiteHandlers.CreateProductScraperDefinition)
 
 	return handler
 }
